# Group_Expense_Tracking

./: README.md  package-lock.json  package.json  pyproject.toml  server.js
public/: dashboard.html  group.html  login.html  make-group.html  profile.html  receipt_upload.html  signup.html
src/: config.py  main.py  queries.py  schema.sql  trip_planner.py
src/chatbot/: bot_logic.py  router.py
src/static/: chatbot.css  chatbot.js
src/templates/: chatbot_widget.html  dashboard.html  error.html  groups.html  login.html  make_group.html  plan_trip.html  profile.html  receipt_upload.html  signup.html  view_trip.html
